--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,14 +3,21 @@
 <head>
   <meta charset="utf-8">
   <title> 
-    Home - Bad Data - Open Knowledge Foundation
+    Bad Data - Open Knowledge Foundation
   </title>
   <meta name="author" content="Open Knowledge Foundation Labs" />
   <meta name="description" content="Bad Data Examples" />
 
   <!-- okf ribbon -->
   <link rel="stylesheet" href="http://assets.okfn.org/themes/okfn/okf-panel.css"/>
-  <link rel="stylesheet" href="http://datapipes.okfnlabs.org/css/style.css" />
+
+  <link href="//netdna.bootstrapcdn.com/bootstrap/2.3.2/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="http://dataprotocols.org/css/style.css" />
+  <style type="text/css">
+    .navbar ul.nav.pull-right {
+      margin-right: 42px;
+    }
+  </style>
 </head>
 <body>
 <!-- OKF Panel -->
@@ -25,19 +32,50 @@
   </div>
 </div>
 <!-- End OKF Panel -->
+<div class="navbar navbar-static-top">
+  <div class="navbar-inner">
+    <div class="container">
+      <a class="brand" href="{{site.baseurl}}/">
+        <img src="http://assets.okfn.org/p/opendatahandbook/img/data-wrench.png" alt="" />
+        Bad Data
+      </a>
+      <ul class="nav pull-right">
+        <li class="divider-vertical"></li>
+        <li>
+          <a href="http://lists.okfn.org/mailman/listinfo/okfn-labs" title="Join the discussion">Mailing List</a>
+        </li>
+        <li class="divider-vertical"></li>
+        <li>
+          <a href="https://github.com/okfn/bad-data" title="Fork and pull to submit new material or corrections">Repo</a>
+        </li>
+        <li class="divider-vertical"></li>
+        <li>
+          <a href="https://twitter.com/OKFNLabs">Twitter</a>
+        </li>
+        <li class="divider-vertical"></li>
+      </ul>
+    </div>
+  </div>
+</div>
 <div class="container">
-  <div class="header">
-    <h1>
-      <a href="/">Bad Data</a>
-    </h1>
-    <a href="http://okfnlabs.org/"><img src="http://assets.okfn.org/p/labs/img/logo-flask.png" style="height: 50px; margin-top: 10px;" /></a>
-  </div>
-
   <div class="content">
-    {{content}}
+    <div class="banner page-header">
+      <h1>
+        {{page.title}}
+        <br />
+        <small>{{page.subtitle}}</small>
+      </h1>
+    </div>
+    <div class="row">
+      <div class="span6 offset3">
+        {{content}}
+      </div>
+    </div>
   </div>
+</div><!-- /container -->
 
-  <div class="footer">
+<footer>
+  <div class="container">
     <p>
       This service is run by the <a href="http://okfnlabs.org">Open
         Knowledge Foundation Labs</a>
@@ -50,8 +88,8 @@
       </a>
     </p>
   </div>
+</footer>
 
-</div><!-- /container -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 <script src="http://assets.okfn.org/themes/okfn/collapse.min.js" type="text/javascript"></script>
 <script src="http://assets.okfn.org/themes/okfn/okf-panel.js" type="text/javascript"></script>
