--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="http://assets.okfn.org/themes/okfn/okf-panel.css"/>
 
   <link href="//netdna.bootstrapcdn.com/bootstrap/2.3.2/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
   <link rel="stylesheet" href="http://dataprotocols.org/css/style.css" />
   <link rel="stylesheet" href="{{site.baseurl}}/css/style.css" />
 </head>
@@ -66,11 +67,7 @@
         <small>{{page.subtitle}}</small>
       </h1>
     </div>
-    <div class="row">
-      <div class="span6 offset3">
-        {{content}}
-      </div>
-    </div>
+    {{content}}
   </div>
 </div><!-- /container -->
 
