[layout][s]: further improvements esp to listing on front page.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,11 +47,11 @@
         </li>
         <li class="divider-vertical"></li>
         <li>
-          <a href="{{site.sourcecode}}" title="Fork and pull to submit new material or corrections">Repo</a>
+          <a href="{{site.sourcecode}}"><i class="fa fa-github"></i> Repo</a>
         </li>
         <li class="divider-vertical"></li>
         <li>
-          <a href="https://twitter.com/OKFNLabs">Twitter</a>
+        <a href="https://twitter.com/OKFNLabs"><i class="fa fa-twitter"></i> @OKFNLabs</a>
         </li>
         <li class="divider-vertical"></li>
       </ul>
