--- a/_layouts/example.html
+++ b/_layouts/example.html
@@ -14,7 +14,7 @@ layout: default
     {% endif %}
     {% if page.dataformat == 'CSV' %}
     <iframe src="http://datapipes.okfnlabs.org/csv/html?url={{page.dataurl | cgi_escape}}" width="100%" style="min-height: 600px;"></iframe>
-    <p><small><a href="http://datapipes.okfnlabs.org/">CSV to HTML powered by DataPipes</a></small></p>
+    <p><small><a href="http://datapipes.okfnlabs.org/csv/html?url={{page.dataurl | cgi_escape}}" target="_blank">Full screen version</a> &ndash; <a href="http://datapipes.okfnlabs.org/">CSV to HTML powered by DataPipes</a></small></p>
     {% endif %}
   </div>
   <div class="span5">
