[layout][s]: add comments to example pages.

--- a/_layouts/example.html
+++ b/_layouts/example.html
@@ -36,6 +36,11 @@ layout: default
     </table>
 
     {{content}}
+
+    <hr />
+    <h3>Comments</h3>
+
+    {% include disqus.html %}
   </div>
 </div>
 
