--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
         </li>
         <li class="divider-vertical"></li>
         <li>
-          <a href="{{site.sourcecode}}"><i class="fa fa-github"></i> Repo</a>
+          <a href="{{site.github}}"><i class="fa fa-github"></i> Repo</a>
         </li>
         <li class="divider-vertical"></li>
         <li>
